# nix

./: .gitignore  IOHE PPT.pptx  LICENSE  README.md  config.py  main.py  pyproject.toml
commands/: init.py  status.py
core/: agent.py  capabilities.py  context_retriever.py  detector.py  tool_selector.py  tools_registry.py
indexer/: __init__.py  call_graph.py  code_summarizer.py  context_builder.py  index_builder.py  index_storage.py  java_parser.py  project_summarizer.py  vector_store.py
llm/: __init__.py  client.py  prompts.py  system_prompts.py
storage/: store.py
tools/: __init__.py  annotation_checker.py  bean_analyzer.py  bean_wiring_checker.py  build_runner.py  call_chain_finder.py  code_analyzer.py  code_describer.py  code_search.py  config_analyzer.py  dependency_analyzer.py  endpoint_analyzer.py  entity_analyzer.py  error_diagnostics.py  error_tracer.py  file_reader.py  fix_suggester.py  full_analyzer.py  issue_finder.py  null_safety_checker.py  project_explorer.py  security_checker.py  semantic_search.py  smart_query.py  test_runner.py
utils/: file.py  logger.py  output.py
