[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nix"
version = "0.1.0"
description = "AI-powered CLI tool for Spring Boot projects"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
nix = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]
packages = ["commands", "core", "llm", "utils", "storage", "tools"]
